# xmc1100-rs

./: Cargo.toml  README.md  device.x  update.sh
src/: lib.rs  nvm.rs  pau.rs  port0.rs  port1.rs  port2.rs  ppb.rs  prng.rs  rtc.rs  scu_analog.rs  scu_clk.rs  scu_general.rs  scu_interrupt.rs  scu_power.rs  scu_reset.rs  shs0.rs  vadc.rs  wdt.rs
src/ccu40/: gcst.rs  gctrl.rs  gstat.rs  midr.rs
src/ccu40_cc40/: c0v.rs  c1v.rs  c2v.rs  c3v.rs  cmc.rs  cr.rs  crs.rs  dit.rs  dits.rs  ecrd0.rs  ecrd1.rs  fpc.rs  fpcs.rs  ins.rs  inte.rs  ints.rs  pr.rs  prs.rs  psc.rs  psl.rs  srs.rs  tc.rs  tcst.rs  timer.rs
src/eru0/: exicon.rs  exisel.rs  exocon.rs
src/nvm/: config1.rs  nvmconf.rs  nvmprog.rs  nvmstatus.rs
src/pau/: avail0.rs  avail1.rs  avail2.rs  flsize.rs  privdis0.rs  privdis1.rs  ram0size.rs  romsize.rs
src/port0/: hwsel.rs  in_.rs  iocr12.rs  iocr4.rs  iocr8.rs  omr.rs  out.rs  pdisc.rs  phcr0.rs  phcr1.rs  pps.rs
src/port1/: hwsel.rs  in_.rs  iocr4.rs  omr.rs  out.rs  pdisc.rs  phcr0.rs  pps.rs
src/port2/: hwsel.rs  in_.rs  iocr0.rs  iocr8.rs  omr.rs  out.rs  pdisc.rs  phcr1.rs  pps.rs
src/ppb/: aircr.rs  ccr.rs  cpuid.rs  icsr.rs  nvic_icer.rs  nvic_icpr.rs  nvic_ipr0.rs  nvic_ipr1.rs  nvic_ipr2.rs  nvic_ipr3.rs  nvic_ipr4.rs  nvic_ipr5.rs  nvic_ipr6.rs  nvic_ipr7.rs  nvic_iser.rs  nvic_ispr.rs  scr.rs  shcsr.rs  shpr2.rs  shpr3.rs  syst_calib.rs  syst_csr.rs  syst_cvr.rs  syst_rvr.rs
src/prng/: chk.rs  ctrl.rs  word.rs
src/rtc/: atim0.rs  atim1.rs  clrsr.rs  ctr.rs  msksr.rs  rawstat.rs  stssr.rs  tim0.rs  tim1.rs
src/scu_clk/: cgatclr0.rs  (+5 more)
(+92 files in other folders)
