[package]
name = "xmc1100"
version = "0.1.0"
authors = ["David Sawatzke <david-sawatzke@users.noreply.github.com>"]
edition = "2018"

[dependencies]
bare-metal = "0.2.0"
cortex-m = "0.6.0"
vcell = "0.1.0"

[dependencies.cortex-m-rt]
optional = true
version = "0.6.8"

[features]
rt = ["cortex-m-rt/device"]
